Aggiunto spacing filtro. Fix classe duplicata maincss

--- a/src/main/resources/public/css/mainstyle.css
+++ b/src/main/resources/public/css/mainstyle.css
@@ -95,7 +95,7 @@ input:focus {
 .ratiologo{width: 20rem;}
 .table__wrapper{ /*overflow-x: auto;*/}
 .username{text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.36);}
-th.checkboxCol{width: 30px;}
+th.checkboxCol{width: 30px; !important}
 th.usernameCol{width:180px; !important}
 th.nameCol{width:100px; !important}
 th.surnameCol{width:120px; !important}
@@ -107,30 +107,17 @@ th.teamCol,
 th.costCol{width:80px; !important}
 .width110{width:110px; !important}
 .width80{width:90px; !important}
-.hide{display:none;}
-.tablecheckbox:checked{
-    background-color:#4FA9BAFF;
-}
-
-.table-button:hover {
-    color: #5598A8FF;
-}
-
+.tablecheckbox:checked{ background-color:#4FA9BAFF; }
+.table-button:hover { color: #5598A8FF;}
 .menu-item {opacity: 0.8;}
 .menu-item:hover {opacity: 1.0;}
+.hidden{display: none;}
+.table-header{ padding-top: 20px; !important}
 
-/* Remove input number arrows*/
-/* Chrome, Safari, Edge, Opera */
+
+/* Remove input number arrows Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-/* Firefox */
-input[type=number] {
-    -moz-appearance: textfield;
-}
+input::-webkit-inner-spin-button {-webkit-appearance: none; margin: 0;}
+/* Remove input number arrows Firefox */
+input[type=number] { -moz-appearance: textfield;}
 
-.hidden{
-    display: none;
-}
